# optimal-transport-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  commitBuild.sh  example.py  firstTimeSetup.sh  setup.py
.circleci/: config.yaml  config.yml
scripts/: gradient_flow.py
src/: greenkhorn.rs  lib.rs  lp_solver.rs  main.rs  simplex.rs  sinkhorn.rs
